--- a/views/detail/index.hbs
+++ b/views/detail/index.hbs
@@ -1,53 +1,50 @@
-
 <style>
-        @import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
-    </style>
-    <header>
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner" role="listbox">
-                <!-- Slide One - Set the background image for this slide in the line below -->
-                <div class="carousel-item active">
-                    <img src="../public/img/Banner-2.jpg">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h2 class="display-4">First Slide</h2>
-                        <p class="lead">This is a description for the first slide.</p>
-                    </div>
-                </div>
-                <!-- Slide Two - Set the background image for this slide in the line below -->
-                <div class="carousel-item">
-                    <img src="../public/img/banner4.jpg">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h2 class="display-4">Second Slide</h2>
-                        <p class="lead">This is a description for the second slide.</p>
-                    </div>
-                </div>
-                <!-- Slide Three - Set the background image for this slide in the line below -->
-                <div class="carousel-item">
-                    <img src="../public/img/Banner-2.jpg">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h2 class="display-4">Third Slide</h2>
-                        <p class="lead">This is a description for the third slide.</p>
-                    </div>
+    @import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
+</style>
+<header>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            <!-- Slide One - Set the background image for this slide in the line below -->
+            <div class="carousel-item active">
+                <img src="../public/img/Banner-2.jpg">
+                <div class="carousel-caption d-none d-md-block">
+                    <h2 class="display-4">First Slide</h2>
+                    <p class="lead">This is a description for the first slide.</p>
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+            <!-- Slide Two - Set the background image for this slide in the line below -->
+            <div class="carousel-item">
+                <img src="../public/img/banner4.jpg">
+                <div class="carousel-caption d-none d-md-block">
+                    <h2 class="display-4">Second Slide</h2>
+                    <p class="lead">This is a description for the second slide.</p>
+                </div>
+            </div>
+            <!-- Slide Three - Set the background image for this slide in the line below -->
+            <div class="carousel-item">
+                <img src="../public/img/Banner-2.jpg">
+                <div class="carousel-caption d-none d-md-block">
+                    <h2 class="display-4">Third Slide</h2>
+                    <p class="lead">This is a description for the third slide.</p>
+                </div>
+            </div>
         </div>
-    </header>
-
-
-
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</header>
+<div class="container" style="width: 100%">
     <div class="row">
         <div class="column">
             <img src="../public/img/logo/bland_logo_adidas2019ss.png" alt="Snow" style="width:100%">
@@ -74,144 +71,132 @@
             <img src="../public/img/logo/bland_logo_vans.png" alt="Mountains" style="width:100%">
         </div>
     </div>
+</div>
+<div align="center">
+    <button type="button" class="btn btn-light" id="brandAll">Xem tất cả thương hiệu</button>
+</div>
+
+<div style="margin-top: 30px;margin-bottom: -40px ;margin-left: 180px;font-size: 40px  ;font-family: Roboto Mono">
+    <p1 class="p1">&nbspGIÀY MỚI&nbsp
+    </p1>
+</div>
+
+<div class="rcorners2 container" style="margin-top: 30px;">
+    <div class="row">
+        <div class="columnT">
+            <img src="../../public/img/collection/new/1.jpg" alt="Snow" style="width:100%">
+            <p align="center">Alphabounce Instict Tripple 990.000đ
+            </p>
+        </div>
+        <div class="columnT">
+            <img src="../../public/img/collection/new/2.png" alt="Forest" style="width:100%">
+            <p align="center">Alphabounce beyond black 1.250.000đ
+            </p>
+        </div>
+        <div class="columnT">
+            <img src="../../public/img/collection/new/3.jpeg" alt="Mountains" style="width:100%">
+            <p align="center">Nike Air Instict Tripple 990.000đ
+            </p>
+        </div>
+        <div class="columnT">
+            <img src="../../public/img/collection/new/4.jpg" alt="Mountains" style="width:100%">
+            <p align="center">Alphabounce beyond black 1.250.000đ
+            </p>
+        </div>
+    </div>
     <div align="center">
-        <button type="button" class="btn btn-light">Xem tất cả thương hiệu</button>
-    </div>
-
-    <div style="margin-top: 30px;margin-bottom: -40px ;margin-left: 180px;font-size: 40px  ;font-family: Roboto Mono">
-        <p1 class="p1">&nbspGIÀY MỚI&nbsp
-        </p1>
-    </div>
-
-
-
-    <div class="rcorners2" style="margin-top: 30px;">
-        <div class="row">
-            <div class="columnT">
-                <img src="../public/img/sneaker/sneak.jpg" alt="Snow" style="width:100%">
-                <p align="center">Alphabounce Instict Tripple 990.000đ
-                </p>
-            </div>
-            <div class="columnT">
-                <img src="../public/img/sneaker/2.jpg" alt="Forest" style="width:100%">
-                <p align="center">Alphabounce beyond black 1.250.000đ
-                </p>
-            </div>
-            <div class="columnT">
-                <img src="../public/img/sneaker/sneak.jpg" alt="Mountains" style="width:100%">
-                <p align="center">Alphabounce Instict Tripple 990.000đ
-                </p>
-            </div>
-            <div class="columnT">
-                <img src="../public/img/sneaker/2.jpg" alt="Mountains" style="width:100%">
-                <p align="center">Alphabounce beyond black 1.250.000đ
-                </p>
-            </div>
-        </div>
-        <div align="center">
-            <button type="button" class="btn btn-secondary">&nbspXem tất cả&nbsp</button>
-        </div>
-    </div>
-
-    <div style="margin-top: 30px;margin-bottom: -110px ;margin-left: 180px;font-size: 40px  ;font-family: Roboto Mono">
-        <p1 class="p1">&nbspBÁN NHIỀU&nbsp
-        </p1>
-    </div>
-
-    <div class="rcorners2" style="margin-top: 100px;">
-        <div class="row">
-            <div class="columnT">
-                <img src="../public/img/sneaker/sneak.jpg" alt="Snow" style="width:100%">
-                <p align="center">Alphabounce Instict Tripple 990.000đ
-                </p>
-            </div>
-            <div class="columnT">
-                <img src="../public/img/sneaker/2.jpg" alt="Forest" style="width:100%">
-                <p align="center">Alphabounce beyond black 1.250.000đ
-                </p>
-            </div>
-            <div class="columnT">
-                <img src="../public/img/sneaker/sneak.jpg" alt="Mountains" style="width:100%">
-                <p align="center">Alphabounce Instict Tripple 990.000đ
-                </p>
-            </div>
-            <div class="columnT">
-                <img src="../public/img/sneaker/2.jpg" alt="Mountains" style="width:100%">
-                <p align="center">Alphabounce beyond black 1.250.000đ
-                </p>
-            </div>
-        </div>
-        <div align="center">
-            <button type="button" class="btn btn-secondary">&nbspXem tất cả&nbsp</button>
-        </div>
-    </div>
-
-    <div style="margin-top: 60px;margin-bottom: -100px ;margin-left: 180px;font-size: 40px  ;font-family: Roboto Mono">
-        <p1 class="p1">BỘ SƯU TẬP
-        </p1>
-    </div>
-
-
-
-    <div style="margin-top: 100px;margin-left:120px">
-        <img src="../public/img/poster1.jpg">
-    </div>
-
-    <div style="margin-top: 30px;margin-bottom: -100px ;margin-left: 360px;font-size: 25px  ;font-family: Roboto Mono">
-        <p1 class="p1">NIKE AIR - NEW WINTER COLLECTION
-        </p1>
-    </div>
-
-
-    <div class="row" style="margin-left: 80px;margin-top: 200px">
-        <div class="columnS">
-            <img src="../public/img/testConvese.jpg" alt=" ... " class="rounded-circle ">
-            <div style="margin-left: -100px;margin-top: 20px;margin-bottom: 30px;font-family: Roboto Mono;font-size: 25px"
-                align="center">Converse<br>Taylor</div>
-        </div>
-        <div class="columnS ">
-            <img src="../public/img/hhh.jpg" alt=" ... " class="rounded-circle ">
-            <div style="margin-left: -100px;margin-top: 20px;margin-bottom: 30px;font-family: Roboto Mono;font-size: 25px"
-                align="center">Top<br>Trending</div>
-        </div>
-        <div class="columnS ">
-            <img src="../public/img/75418993_793712877742665_6311140960398999552_n-300x300.jpg "
-                class="rounded-circle ">
-            <div style="margin-left: -100px;margin-top: 20px;margin-bottom: 30px;font-family: Roboto Mono;font-size: 25px"
-                align="center">Độc Lạ</div>
-        </div>
-
-    </div>
-    <div align="center" style="margin-top: 10px; margin-bottom: 80px;">
         <button type="button" class="btn btn-secondary">&nbspXem tất cả&nbsp</button>
     </div>
+</div>
+
+<div style="margin-top: 30px;margin-bottom: -110px ;margin-left: 180px;font-size: 40px  ;font-family: Roboto Mono">
+    <p1 class="p1">&nbspBÁN NHIỀU&nbsp
+    </p1>
+</div>
+
+<div class="rcorners2 container" style="margin-top: 100px;">
+    <div class="row">
+        <div class="columnT">
+            <img src="../public/img/sneaker/sneak.jpg" alt="Snow" style="width:100%">
+            <p align="center">Alphabounce Instict Tripple 990.000đ
+            </p>
+        </div>
+        <div class="columnT">
+            <img src="../public/img/sneaker/2.jpg" alt="Forest" style="width:100%">
+            <p align="center">Alphabounce beyond black 1.250.000đ
+            </p>
+        </div>
+        <div class="columnT">
+            <img src="../public/img/sneaker/sneak.jpg" alt="Mountains" style="width:100%">
+            <p align="center">Alphabounce Instict Tripple 990.000đ
+            </p>
+        </div>
+        <div class="columnT">
+            <img src="../public/img/sneaker/2.jpg" alt="Mountains" style="width:100%">
+            <p align="center">Alphabounce beyond black 1.250.000đ
+            </p>
+        </div>
+    </div>
+    <div align="center">
+        <button type="button" class="btn btn-secondary">&nbspXem tất cả&nbsp</button>
+    </div>
+</div>
+
+<div style="margin-top: 60px;margin-bottom: -100px ;margin-left: 180px;font-size: 40px  ;font-family: Roboto Mono">
+    <p1 class="p1">BỘ SƯU TẬP
+    </p1>
+</div>
 
 
 
-    <script language="javascript ">
-        document.getElementById("search ").onclick = function () {
-            document.getElementById("quicksearch-hidden ").hidden = false;
-            document.getElementById("search ").hidden = true;
-        };
+<div style="text-align: center; margin-top: 50px">
+    <img src="../public/img/poster1.jpg">
+</div>
 
-        document.getElementById("searchClose ").onclick = function () {
-            document.getElementById("quicksearch-hidden ").hidden = true;
-            document.getElementById("search ").hidden = false;
-        };
+<div style="text-align: center;font-size: 25px  ;font-family: Roboto Mono; margin-bottom: 40px">
+    <p1 class="p1">NIKE AIR - NEW WINTER COLLECTION
+    </p1>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-4" style="text-align: center">
+            <img src="../public/img/testConvese.jpg" alt=" ... " class="rounded-circle ">
+            <div style="font-family: Roboto Mono;font-size: 25px" align="center">Converse<br>Taylor</div>
+        </div>
+        <div class="col-4" style="text-align: center">
+            <img src="../public/img/hhh.jpg" alt=" ... " class="rounded-circle ">
+            <div style="font-family: Roboto Mono;font-size: 25px" align="center">Top<br>Trending</div>
+        </div>
+        <div class="col-4" style="text-align: center">
+            <img src="../public/img/75418993_793712877742665_6311140960398999552_n-300x300.jpg "
+                class="rounded-circle ">
+            <div style="margin-bottom: 30px;font-family: Roboto Mono;font-size: 25px" align="center">Độc Lạ</div>
+        </div>
+
+    </div>
+</div>
+<div align="center" style="margin-top: 10px; margin-bottom: 80px;">
+    <button type="button" class="btn btn-secondary">&nbspXem tất cả&nbsp</button>
+</div>
+
+
+<script>
+    $(".noti-badge ").prepend($(".noti a ").length);
+    $('#brandAll').click(function () {
+        location.href = "/brand";
+    });
+</script>
+
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js "
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous ">
     </script>
-    <script>
-        $(".noti-badge ").prepend($(".noti a ").length)
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js "
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous ">
     </script>
-
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js "
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous ">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js "
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous ">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js "
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous ">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js "
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous ">
     </script>
