--- a/views/detail/searchResult.hbs
+++ b/views/detail/searchResult.hbs
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="../../public/css/search.css">
-<div class=></div>
+<div class="container"></div>
 <div class="row">
   <div class="col-2 avd-search" style="background-color: gray">
     <p><b>LỌC SẢN PHẨM</b></p>
@@ -13,8 +13,7 @@
         </label>
       </div>
       <div class="form-check" onchange="genderChange(this)">
-        <input class="form-check-input" type="radio" name="exampleRadios" id="avd_gender_female" value="option1"
-          checked />
+        <input class="form-check-input" type="radio" name="exampleRadios" id="avd_gender_female" value="option1">
         <label class="form-check-label" for="avd_gender_female">
           Nữ
         </label>
@@ -116,7 +115,7 @@
             <a href="/product/{{id}}">
               <div class="itemImg" style="background-image: url(../public/img/sneaker/2.jpg);"></div>
             </a>
-            
+
             <div class="itemName" id="itemName">
               {{name}}
             </div>
